fix z-index select2

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -1280,3 +1280,10 @@ body {
     }
   }
 }
+
+.form-control.select2-container {
+  z-index: 1;
+  &.select2-container-active.select2-dropdown-open.open {
+    z-index: 3;
+  }
+}
